--- a/IA.html
+++ b/IA.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/IA.jpg">
         <h1>Inteligenia Artificial</h1>
         <article>
             <p class="parrafo">
