--- a/IOT.html
+++ b/IOT.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/IOT.jpg">
         <h1>IOT</h1>
         <article>
             <p class="parrafo">
