--- a/css3.html
+++ b/css3.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+            <img src="img/css3.png">
         <h1>CSS3</h1>
         <article>
             <p class="parrafo">
