--- a/mecatronica.html
+++ b/mecatronica.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/Mecatronica.jpg">
         <h1>Mecatronica</h1>
         <article>
             <p class="parrafo">
