--- a/ml.html
+++ b/ml.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/ML.png">
         <h1>MACHINE LEARNING</h1>
         <article>
             <p class="parrafo">
