--- a/print.html
+++ b/print.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/Impresora3d.jpg">
         <h1>Impresora 3D</h1>
         <article>
             <p class="parrafo">
