--- a/pwa.html
+++ b/pwa.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/pwa.png">
         <h1>Progresive Web App</h1>
         <article>
             <p class="parrafo">
