--- a/seg.html
+++ b/seg.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/Seguridad.jpg">
         <h1>CIBERSEGURIDAD</h1>
         <article>
             <p class="parrafo">
