--- a/5g.html
+++ b/5g.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+            <img src="img/5G.jpg">
         <h1>TECNOLOGIA G5</h1>
         <article>
             <p class="parrafo">
