--- a/bitcoin.html
+++ b/bitcoin.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+            <img src="img/BitCoin.jpg">
         <h1>CRIPTOMONEDA, CRIPTODIVISA</h1>
         <article>
             <p class="parrafo">
