--- a/deepl.html
+++ b/deepl.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+            <img src="img/DL.jpg">
         <h1>DEEP LEARNING</h1>
         <article>
             <p class="parrafo">
