--- a/html5.html
+++ b/html5.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/html5.jpg">
         <h1>HTML5</h1>
         <article>
             <p class="parrafo">
