--- a/javascript.html
+++ b/javascript.html
@@ -10,6 +10,7 @@
 <body>
     <strong></strong>
     <section>
+        <img src="img/js.png">
         <h1>JavaScript</h1>
         <article>
             <p class="parrafo">
