Se modificaron las paginas y se creo la pagina index

--- a/deepl.html
+++ b/deepl.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
             <img src="img/DL.jpg">
         <h1>DEEP LEARNING</h1>
@@ -31,5 +30,7 @@
             </p>
         </article>
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
