--- a/IOT.html
+++ b/IOT.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
         <img src="img/IOT.jpg">
         <h1>IOT</h1>
@@ -32,5 +31,7 @@
             </p>
         </article>
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
