--- a/bitcoin.html
+++ b/bitcoin.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
             <img src="img/BitCoin.jpg">
         <h1>CRIPTOMONEDA, CRIPTODIVISA</h1>
@@ -27,5 +26,7 @@
             </p>
         </article>
     </section>
+    
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
