--- a/css3.html
+++ b/css3.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
             <img src="img/css3.png">
         <h1>CSS3</h1>
@@ -37,5 +36,7 @@
             </p>
         </article>        
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
