--- a/html5.html
+++ b/html5.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
         <img src="img/html5.jpg">
         <h1>HTML5</h1>
@@ -59,5 +58,7 @@
             </ol>
         </article>
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
