--- a/javascript.html
+++ b/javascript.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
         <img src="img/js.png">
         <h1>JavaScript</h1>
@@ -53,5 +52,7 @@
             </p>
         </article>    
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
