--- a/ml.html
+++ b/ml.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
         <img src="img/ML.png">
         <h1>MACHINE LEARNING</h1>
@@ -18,5 +17,7 @@
             </p>
         </article>
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
