--- a/print.html
+++ b/print.html
@@ -20,5 +20,7 @@
             </p>
         </article>
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
