--- a/seg.html
+++ b/seg.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <strong></strong>
     <section>
         <img src="img/Seguridad.jpg">
         <h1>CIBERSEGURIDAD</h1>
@@ -24,5 +23,7 @@
             </p>
         </article>
     </section>
+
+    <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
 </body>
 </html>
