Ruta al repositorio.

--- a/index.html
+++ b/index.html
@@ -409,5 +409,9 @@
             </p>
         </article>
     </section>
+
+    <section>
+        <a href="https://github.com/Magdalena1983/SeminarioTecnologia">Ir a Github</a>
+    </section>
 </body>
 </html>
