Modificacion el index con los enlaces a los contenidos

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 <body>
     <section>
         <img src="img/html5.jpg">
-        <h1><strong>HTML5</strong>
-        </h1>
+        <h1><strong>HTML5</strong></h1>
         <article>
             <p class="parrafo">
                 eS LA ÚLTIMA VERSIÓN DEL LENGUAJE EN EL QUE SE ESCRIBEN LAS PÁGINAS wEBS Y LOS BLOGS DE BLOGGER, UN LENGUAJE QUE SÓLO CON CAPACES DE LEER LOS ÚLTIMOS NAVEGADORES, YA QUE LOS QUE SON MÁS ANTICUADOS HAY ALGUNAS ETIQUETAS QUE NO SON CAPACES DE INTERPRETAR. eN UN BLOG EL USO DE html5 SE REALIZA PRINCIPALMENTE EN LAS PLANTILLAS, ES DECIR: NUESTRA PLANTILLA PUEDE ESTAR ESCRITA EN html4, O EN html5, USANDO LA VERSIÓN 2 Ó 3 DE css. sIRVE PARA INTEGRAR CONTENIDOS MULTIMEDIA, FLASH Y PARA DAR UN SENTIDO SEMÁNTICO A CADA PARTE DEL BLOG O PÁGINA wEB.
@@ -60,6 +59,16 @@
         </article>
     </section>
 
+    <a href="https://www.w3schools.com/html/html5_intro.asp">w3schools</a>
+    <a href="https://developer.mozilla.org/es/docs/HTML/HTML5">mozilla</a>
+    <a href="https://www.html5rocks.com/en/">html5rocks</a>
+    <a href="https://www.internetya.co/que-es-html5-y-para-que-sirve/">internetya</a>
+
+    <a href="https://www.youtube.com/watch?v=QC9_8nRNNHA&list=PLU8oAlHdN5BnX63lyAeV0LzLnpGudgRrK">youtube 1</a>
+    <a href="https://www.youtube.com/watch?v=rpPUQ2qVFYw&list=PLv6CkzbbGAlXld23oW5eTzoSrtHkV6i99">youtube 2</a>
+    <a href="https://www.youtube.com/watch?v=WSFT4OQF_mA">youtube 3</a>
+    <a href="https://www.youtube.com/watch?v=jbSDXC-xjEI">youtube 4</a>
+
     <section>
         <img src="img/css3.png">
         <h1><strong>CSS3</strong></h1>
@@ -88,6 +97,16 @@
             </p>
         </article>        
     </section>
+
+    <a href="https://www.w3schools.com/css/">w3schools</a>
+    <a href="https://www.ecured.cu/CSS3">ecured</a>
+    <a href="https://desarrolloweb.com/manuales/css3.html">desarrolloweb</a>
+    <a href="https://www.w3.org/standards/techs/css">w3</a>
+
+    <a href="https://www.youtube.com/watch?v=siWLadl5j5w&list=PLH_tVOsiVGzk4vus80XGsKAW-e0gjOd5x">Css3 1</a>
+    <a href="https://www.youtube.com/watch?v=4Gk1OQrei8U">Css3 2</a>
+    <a href="https://www.youtube.com/watch?v=yMT7RpEeIq0">Css3 3</a>
+    <a href="https://www.youtube.com/watch?v=q6Is8k9x7Eg">Css3 4</a>
 
     <section>
         <img src="img/js.png">
@@ -133,6 +152,16 @@
             </p>
         </article>    
     </section>
+
+    <a href="https://www.javascript.com/">javascript</a>
+    <a href="https://www.w3schools.com/js/">w3schools</a>
+    <a href="https://developer.mozilla.org/es/docs/Web/JavaScript">mozilla</a>
+    <a href="https://www.codecademy.com/learn/introduction-to-javascript">codecademy</a>
+
+    <a href="https://www.youtube.com/watch?v=seaq4UxKNHU">youtube 1</a>
+    <a href="https://www.youtube.com/watch?v=xnWtGNiG2lg&list=PLhSj3UTs2_yVC0iaCGf16glrrfXuiSd0G">youtube 2</a>
+    <a href="https://www.youtube.com/watch?v=RqQ1d1qEWlE">youtube 3</a>
+    <a href="https://www.youtube.com/watch?v=nqre9kKFRpc">youtube 4</a>
 
     <section>
         <img src="img/pwa.png">
@@ -222,6 +251,16 @@
         </article>
     </section>
 
+    <a href="https://developers.google.com/web/progressive-web-apps/">google</a>
+    <a href="https://codigofacilito.com/articulos/progressive-apps">codigofacilito</a>
+    <a href="https://www.tu-app.net/blog/progressive-web-app/">tu-app.net</a>
+    <a href="https://pwa.rocks/">pwa.rocks</a>
+
+    <a href="https://www.youtube.com/watch?v=z2JgN6Ae-Bo">youtube 1</a>
+    <a href="https://www.youtube.com/watch?v=0OJ24kCV-J8">youtube 2</a>
+    <a href="https://www.youtube.com/watch?v=QSb4VZnF9q4">youtube 3</a>
+    <a href="https://www.youtube.com/watch?v=z6LR-IppZpc">youtube 5</a>
+
     <section>
         <img src="img/IA.jpg">
         <h1><strong>Inteligenia Artificial</strong></h1>
@@ -269,6 +308,16 @@
         </article>
     </section>
 
+    <a href="https://www.iberdrola.com/te-interesa/tecnologia/que-es-inteligencia-artificial">iberdrola</a>
+    <a href="https://searchdatacenter.techtarget.com/es/definicion/Inteligencia-artificial-o-AI">searchdatacenter</a>
+    <a href="https://www.muyinteresante.es/tecnologia/articulo/ventajas-y-riesgos-de-la-inteligencia-artificial-651449483429">muyinteresante</a>
+    <a href="https://www.xataka.com/tag/inteligencia-artificial">xataka</a>
+
+    <a href="https://www.youtube.com/watch?v=5rvZBsueMoc">youtube 1</a>
+    <a href="https://www.youtube.com/watch?v=LWBnf5O_iPg">youtube 2</a>
+    <a href="https://www.youtube.com/watch?v=mqp66Ze3A0A">youtube 3</a>
+    <a href="https://www.youtube.com/watch?v=8lMIdrlIWOQ">youtube 4</a>
+
     <section>
         <img src="img/ML.png">
         <h1><strong>MACHINE LEARNING</strong></h1>
@@ -278,6 +327,16 @@
             </p>
         </article>
     </section>
+
+    <a href="https://cleverdata.io/que-es-machine-learning-big-data/">cleverdata</a>
+    <a href="https://es.coursera.org/learn/machine-learning">coursera</a>
+    <a href="https://blog.adext.com/es/machine-learning-guia-completa">adext</a>
+    <a href="https://www.sas.com/en_us/insights/analytics/machine-learning.html">sas</a>
+
+    <a href="https://www.youtube.com/watch?v=7ClLKBUvmRk">youtube 1</a>
+    <a href="https://www.youtube.com/watch?v=KytW151dpqU">youtube 2</a>
+    <a href="https://www.youtube.com/watch?v=nKW8Ndu7Mjw">youtube 3</a>
+    <a href="https://www.youtube.com/watch?v=oGdmSshtVWw">youtube 4</a>
 
     <section>
         <img src="img/DL.jpg">
